--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name":"fuzzyset.js",
    "description":"A fuzzy string set for JavaScript",
    "version":"0.0.1",
-   "homepage":"http://github.com/Glench/fuzzyset.js",
+   "homepage":"http://Glench.github.com/fuzzyset.js",
    "repository":"git://github.com/Glench/fuzzyset.js.git",
    "author":"Glen Chiacchieri (http://glench.com/)",
    "main":"./index.js",
