--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name":"fuzzyset.js",
-   "description":"A fuzzy string set for JavaScript",
-   "version":"0.0.91",
+   "description":"A fast fuzzy string set for JavaScript",
+   "version":"1.0.0",
    "homepage":"http://Glench.github.com/fuzzyset.js",
    "repository":"git://github.com/Glench/fuzzyset.js.git",
    "author":"Glen Chiacchieri (http://glench.com/)",
