--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
    "name":"fuzzyset.js",
    "description":"A fast fuzzy string set for JavaScript",
-   "version":"1.0.1",
+   "version":"1.0.2",
    "homepage":"http://Glench.github.com/fuzzyset.js",
    "repository":"git://github.com/Glench/fuzzyset.js.git",
    "author":"Glen Chiacchieri (http://glench.com/)",
+   "license": "see LICENSE.md",
    "main":"./index.js",
    "devDependencies":{
       "should":"*"
