--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
    "name":"fuzzyset.js",
    "description":"A fast fuzzy string set for JavaScript",
-   "version":"1.0.2",
+   "version":"1.0.3",
    "homepage":"http://Glench.github.com/fuzzyset.js",
    "repository":"git://github.com/Glench/fuzzyset.js.git",
    "author":"Glen Chiacchieri (http://glench.com/)",
    "license": "see LICENSE.md",
+   "funding": {
+       "type": "License Zero",
+       "url": "https://licensezero.com/offers/562c0ffe-df98-4348-87b7-e60e3c37c534#buy"
+   },
    "main":"./index.js",
    "devDependencies":{
       "should":"*"
