fix funding url

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
    "license": "see LICENSE.md",
    "funding": {
        "type": "License Zero",
-       "url": "https://licensezero.com/offers/562c0ffe-df98-4348-87b7-e60e3c37c534#buy"
+       "url": "https://licensezero.com/offers/562c0ffe-df98-4348-87b7-e60e3c37c534"
    },
    "main":"./index.js",
    "devDependencies":{
